--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <main>
         <button type="button" class="collapsible">羅馬數字</button>
         <div class="content">    
-            <div class="list-item"><input id="cover1" type="checkbox"><label for="cover1">I<span class="indent">首頁</span><span class="red indent">填寫員編&簽名</span></label></div>
+            <div class="list-item"><input id="cover1" type="checkbox"><label for="cover1">I<span class="indent">首頁</span><span class="red indent">有填寫員編&簽名</span></label></div>
             <div class="list-item"><input id="cover2" type="checkbox"><label for="cover2">II<span class="indent">分配表</span><span class="red">存在，沒有丟掉</span></label></div>
-            <div class="list-item"><input id="cover3" type="checkbox"><label for="cover3">III<span class="indent">修訂版次紀錄</span></label></div>
+            <div class="list-item"><input id="cover3" type="checkbox"><label for="cover3">III<span class="indent">修訂版次紀錄<span class="red indent">有簽名</span></span></label></div>
             <div class="list-item"><input id="cover4" type="checkbox"><label for="cover4">IV<span class="indent">有效頁次表</span></label></div>
             <div class="list-item"><input id="cover5" type="checkbox"><label for="cover5">V<span class="indent">修訂說明</span></label></div>
         </div>
