--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button type="button" class="collapsible">羅馬數字</button>
         <div class="content">    
             <div class="list-item"><input id="cover1" type="checkbox"><label for="cover1">I<span class="indent">首頁</span><span class="red indent">有填寫員編&簽名</span></label></div>
-            <div class="list-item"><input id="cover2" type="checkbox"><label for="cover2">II<span class="indent">分配表</span><span class="red">存在，沒有丟掉</span></label></div>
+            <div class="list-item"><input id="cover2" type="checkbox"><label for="cover2"><span class="indent red">確認<span class="black">II 分配表</span>沒丟掉</span></label></div>
             <div class="list-item"><input id="cover3" type="checkbox"><label for="cover3">III<span class="indent">修訂版次紀錄<span class="red indent">有簽名</span></span></label></div>
             <div class="list-item"><input id="cover4" type="checkbox"><label for="cover4">IV<span class="indent">有效頁次表</span></label></div>
             <div class="list-item"><input id="cover5" type="checkbox"><label for="cover5">V<span class="indent">修訂說明</span></label></div>
@@ -139,7 +139,7 @@
         <button type="button" class="collapsible">檢查卡</button>
         <div class="content">
             <div class="list-item"><input id="dgchecklist" type="checkbox"><label for="dgchecklist">DG檢查卡<span class="indent">004版</span></label></div>
-            <div class="list-item"><input id="b738checklist" type="checkbox"><label for="b738checklist">B738緊急裝備檢查卡<span class="red">舊機要抽掉(*跟A保留)</span></label></div>
+            <div class="list-item"><input id="b738checklist" type="checkbox"><label for="b738checklist"><span class="red">抽掉<span class="black">B738緊急裝備檢查卡</span>(*跟A保留)</span></label></div>
         </div>
 
     <main>
